--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -23,9 +23,13 @@ x-superset-volumes:
   - ./docker:/app/docker
   - superset_home:/app/superset_home
 
+x-networks: &networks
+  - pv-network
+
 version: "3.7"
 services:
   redis:
+    networks: *networks
     image: redis:7
     container_name: superset_cache
     restart: unless-stopped
@@ -33,6 +37,7 @@ services:
       - redis:/data
 
   db:
+    networks: *networks
     env_file: docker/.env-non-dev
     image: postgres:15
     container_name: superset_db
@@ -42,6 +47,7 @@ services:
       - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
 
   superset:
+    networks: *networks
     env_file: docker/.env-non-dev
     image: *superset-image
     container_name: superset_app
@@ -50,10 +56,12 @@ services:
     restart: unless-stopped
     ports:
       - 8088:8088
+      - 5678:5678
     depends_on: *superset-depends-on
     volumes: *superset-volumes
 
   superset-init:
+    networks: *networks
     image: *superset-image
     container_name: superset_init
     command: ["/app/docker/docker-init.sh"]
@@ -65,6 +73,7 @@ services:
       disable: true
 
   superset-worker:
+    networks: *networks
     image: *superset-image
     container_name: superset_worker
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
@@ -81,6 +90,7 @@ services:
         ]
 
   superset-worker-beat:
+    networks: *networks
     image: *superset-image
     container_name: superset_worker_beat
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
@@ -99,3 +109,8 @@ volumes:
     external: false
   redis:
     external: false
+
+networks:
+  pv-network:
+    name: pv-network
+    driver: bridge
