--- a/docker/.env-non-dev
+++ b/docker/.env-non-dev
@@ -47,6 +47,7 @@ REDIS_PORT=6379
 
 SUPERSET_ENV=production
 SUPERSET_LOAD_EXAMPLES=yes
+SECRET_KEY=TEST_NON_DEV_SECRET
 SUPERSET_SECRET_KEY=TEST_NON_DEV_SECRET
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
